--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     font-family: "Lexend", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    color: white;
+    
 }
 
 body,
@@ -12,7 +14,10 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: black;
+    
 }
+
 
 /* VIDEO */
 
@@ -22,6 +27,7 @@ video {
     object-fit: cover;
     width: 100%;
     filter: brightness(0.5);
+    
 }
 
 .video-container {
@@ -38,11 +44,20 @@ video {
     left: 0;
     min-width: 100%;
     min-height: 100%;
+    
 }
 
 /* CONTEÚDO */
 
+a {
+    text-decoration: none;
+    
+}
 
+i.bi {
+    color: #455953;
+    
+}
 
 .content {
     position: absolute;
@@ -50,24 +65,69 @@ video {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    /* Cor do texto sobreposto */
+    
 
 }
 
 .content h1 {
-    font-size: 3rem;
+    font-size: 4rem;
+    
 }
 
 .content p {
-    font-size: 1.5rem;
-}
-
-#profile-picture {
-    filter: opacity(0.87) saturate(0.8);
+    font-size: 2rem;
+    font-weight: 300;
+    
 }
 
 #scroll-icon {
     display: flex;
     justify-content: center;
     margin-top: 12rem;
+}
+
+#txt-reduce {
+    font-size: 4rem;
+    
+}
+
+
+
+/* CONTATO */
+
+#contact button {
+   border-radius: 0;
+   border: none;
+   font-size: 1.5rem;
+   padding: 1.5rem;
+   transition: 0.2s ease;
+}
+
+#whatsapp {
+    background-color: #24CC63;   
+}
+
+#whatsapp:hover{
+    background-color: #1daa53; 
+}
+
+#linkedin {
+    background-color: #094b8e;
+}
+
+#linkedin:hover {
+    background-color: #063768;
+}
+
+/* RESPONSIVIDADE */
+
+@media (max-width: 574px) {
+    #txt-reduce {
+        font-size: 2.5rem;
+    }
+
+    #contact button {
+        padding: 1rem;
+        font-size: 1rem;
+    }
 }
