--- a/style.css
+++ b/style.css
@@ -49,6 +49,16 @@ video {
 
 /* CONTEÚDO */
 
+#scroll-icon {
+    display: flex;
+    justify-content: center;
+    margin-top: 12rem;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
 a {
     text-decoration: none;
     
@@ -80,16 +90,7 @@ i.bi {
     
 }
 
-#scroll-icon {
-    display: flex;
-    justify-content: center;
-    margin-top: 12rem;
-}
 
-#txt-reduce {
-    font-size: 4rem;
-    
-}
 
 
 
@@ -122,7 +123,7 @@ i.bi {
 /* RESPONSIVIDADE */
 
 @media (max-width: 574px) {
-    #txt-reduce {
+    .txt-reduce {
         font-size: 2.5rem;
     }
 
@@ -130,4 +131,6 @@ i.bi {
         padding: 1rem;
         font-size: 1rem;
     }
+
+
 }
