--- a/style.css
+++ b/style.css
@@ -94,9 +94,9 @@ i.bi {
 
 
 
-/* CONTATO */
+/* SOCIALS */
 
-#contact button {
+#socials button {
    border-radius: 0;
    border: none;
    font-size: 1.5rem;
@@ -120,6 +120,14 @@ i.bi {
     background-color: #063768;
 }
 
+#github {
+    background-color: #222222;
+}
+
+#github:hover {
+    background-color: #000000;
+}
+
 /* RESPONSIVIDADE */
 
 @media (max-width: 574px) {
@@ -127,7 +135,7 @@ i.bi {
         font-size: 2.5rem;
     }
 
-    #contact button {
+    #socials button {
         padding: 1rem;
         font-size: 1rem;
     }
