--- a/style.css
+++ b/style.css
@@ -158,5 +158,13 @@ i.bi {
         display: block;
     }
 
+    #carousel-prev-btn {
+        display: none;
+    }
+
+    #carousel-next-btn {
+        display: none;
+    }
+
 
 }
