--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@
     top: 10px;
     right: 10px;
     z-index: 1000;
-    padding: 10px 15px;
     font-size: 16px;
     font-weight: bold;
-    border-radius: 5px;
+    border: none;
     cursor: pointer;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    background:transparent;
 }
+
 
 
 body,
